--- a/shellyupdater/templates/base.html
+++ b/shellyupdater/templates/base.html
@@ -47,6 +47,7 @@
                 <div class="sidebar-heading">Shelly Updater</div>
                 <div class="list-group list-group-flush">
                     <a href="{% url 'home' %}" class="list-group-item list-group-item-action bg-light">Home</a>
+                    <a href="{% url 'things' %}" class="list-group-item list-group-item-action bg-light">Things</a>
                       <!--
 
                     <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
