Update handling and Bootstrap Table

--- a/shellyupdater/templates/base.html
+++ b/shellyupdater/templates/base.html
@@ -92,6 +92,7 @@
             <script src="{% static 'js/jquery-3.4.1.min.js' %}" type="text/javascript"></script>
             <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
             <script src="{% static 'js/bootstrap-table.min.js' %}" type="text/javascript"></script>
+            <script src="{% static 'js/bootstrap-table-multiple-sort.min.js' %}" type="text/javascript"></script>
         {% endblock footer_javascript_site %}
         {% block footer_javascript_section %}{% endblock footer_javascript_section %}
         {% block footer_javascript_page %}{% endblock footer_javascript_page %}
