--- a/shellyupdater/updates/templates/things_overview.html
+++ b/shellyupdater/updates/templates/things_overview.html
@@ -27,7 +27,13 @@
 
             {% endif %}
 
-            <table class="table table-striped" data-toggle="table" data-sort-name="thing_label" data-sort-order="asc" id="table">
+            <table
+                    class="table table-striped"
+                    data-toggle="table"
+                    data-sort-name="thing_label"
+                    data-sort-order="asc"
+                    data-search="true"
+                    id="table">
                 <thead>
                     <tr>
                         <th data-field="thing_uid" data-sortable="true" class="" scope="col">UID</th>
