Added settings via .env file

--- a/shellyupdater/updates/templates/home.html
+++ b/shellyupdater/updates/templates/home.html
@@ -22,20 +22,20 @@
                         <table>
                             <tbody>
                                 <tr>
-                                    <td class="col-4">Anzahl Shellies</td>
-                                    <td class="col-8 text-right">{{ shelly_info.shelly_id__count }}</td>
+                                    <td class="">Anzahl Shellies</td>
+                                    <td class="text-right">{{ shelly_info.shelly_id__count }}</td>
                                 </tr>
                                 <tr>
-                                    <td class="col-4">Battery MIN</td>
-                                    <td class="col-8 text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__min }} %</td>
+                                    <td class="">Battery MIN</td>
+                                    <td class="text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__min }} %</td>
                                 </tr>
                                 <tr>
-                                    <td class="col-4">Battery MAX</td>
-                                    <td class="col-8 text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__max }} %</td>
+                                    <td class="">Battery MAX</td>
+                                    <td class="text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__max }} %</td>
                                 </tr>
                                 <tr>
-                                    <td class="col-4">Battery AVG</td>
-                                    <td class="col-8 text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__avg|floatformat:2 }} %</td>
+                                    <td class="">Battery AVG</td>
+                                    <td class="text-right">{{ shelly_info.shelly2infos__shelly_battery_percent__avg|floatformat:2 }} %</td>
                                 </tr>
                             </tbody>
                         </table>
